src/main/bnfc/asm/except/Parexcept.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.10 from Parexcept.y
-----------------------------------------------------------------------------


terminal L_err is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pExpr -> Expr                               (0)
	%start_pExpr1 -> Expr1                             (1)
	%start_pExpr2 -> Expr2                             (2)
	%start_pExpr3 -> Expr3                             (3)
	%start_pValue -> Value                             (4)
	%start_pContext -> Context                         (5)
	%start_pPattern -> Pattern                         (6)
	%start_pVariation -> Variation                     (7)
	%start_pGroundValue -> GroundValue                 (8)
	%start_pDuality -> Duality                         (9)
	%start_pLyst -> Lyst                               (10)
	%start_pSymbol -> Symbol                           (11)
	%start_pPrompt -> Prompt                           (12)
	%start_pListExpr1 -> ListExpr1                     (13)
	%start_pListExpr2 -> ListExpr2                     (14)
	%start_pListPattern -> ListPattern                 (15)
	%start_pListVariation -> ListVariation             (16)
	String -> L_quoted                                 (17)
	Integer -> L_integ                                 (18)
	Double -> L_doubl                                  (19)
	UIdent -> L_UIdent                                 (20)
	LIdent -> L_LIdent                                 (21)
	Wild -> L_Wild                                     (22)
	Expr -> Expr ListExpr1 ';'                         (23)
	Expr -> Expr1                                      (24)
	Expr1 -> 'try' Expr1 ListExpr2 ';'                 (25)
	Expr1 -> Expr2                                     (26)
	Expr2 -> 'raise' Prompt Expr3                      (27)
	Expr2 -> Expr3                                     (28)
	Expr3 -> Value                                     (29)
	Expr3 -> '(' Expr ')'                              (30)
	Value -> '\\' ListVariation '->' Expr3             (31)
	Value -> '@' Context                               (32)
	Value -> Pattern                                   (33)
	Value -> Prompt                                    (34)
	Context -> '{' Context ListExpr2 '}'               (35)
	Context -> '{' Value Context '}'                   (36)
	Context -> '{' 'try' Prompt Context Expr3 '}'      (37)
	Context -> '{' 'try' Prompt Expr3 Context '}'      (38)
	Context -> '{' 'raise' Prompt Context '}'          (39)
	Pattern -> Symbol '(' ListPattern ')'              (40)
	Pattern -> Variation                               (41)
	Pattern -> GroundValue                             (42)
	Pattern -> Lyst                                    (43)
	Variation -> UIdent                                (44)
	Variation -> Wild                                  (45)
	Variation -> '`' Expr3 '\''                        (46)
	GroundValue -> Duality                             (47)
	GroundValue -> String                              (48)
	GroundValue -> Integer                             (49)
	GroundValue -> Double                              (50)
	GroundValue -> '$' Expr3 '$'                       (51)
	Duality -> 'true'                                  (52)
	Duality -> 'false'                                 (53)
	Lyst -> '[' ']'                                    (54)
	Lyst -> '[' ListPattern ']'                        (55)
	Lyst -> '[' ListPattern '|' Lyst ']'               (56)
	Lyst -> '[' ListPattern '|' Variation ']'          (57)
	Symbol -> LIdent                                   (58)
	Prompt -> '%' LIdent '%'                           (59)
	ListExpr1 -> Expr1                                 (60)
	ListExpr1 -> Expr1 ListExpr1                       (61)
	ListExpr2 -> Expr2                                 (62)
	ListExpr2 -> Expr2 ListExpr2                       (63)
	ListPattern -> Pattern                             (64)
	ListPattern -> Pattern ',' ListPattern             (65)
	ListVariation -> Variation                         (66)
	ListVariation -> Variation ',' ListVariation       (67)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'$'            { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'\''           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	','            { PT _ (TS _ 6) }
	'->'           { PT _ (TS _ 7) }
	';'            { PT _ (TS _ 8) }
	'@'            { PT _ (TS _ 9) }
	'['            { PT _ (TS _ 10) }
	'\\'           { PT _ (TS _ 11) }
	']'            { PT _ (TS _ 12) }
	'`'            { PT _ (TS _ 13) }
	'false'        { PT _ (TS _ 14) }
	'raise'        { PT _ (TS _ 15) }
	'true'         { PT _ (TS _ 16) }
	'try'          { PT _ (TS _ 17) }
	'{'            { PT _ (TS _ 18) }
	'|'            { PT _ (TS _ 19) }
	'}'            { PT _ (TS _ 20) }
	L_quoted       { PT _ (TL $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_UIdent       { PT _ (T_UIdent $$) }
	L_LIdent       { PT _ (T_LIdent $$) }
	L_Wild         { PT _ (T_Wild $$) }
	L_err          { _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pExpr    rule  0
	%start_pExpr1   rule  1
	%start_pExpr2   rule  2
	%start_pExpr3   rule  3
	%start_pValue   rule  4
	%start_pContext rule  5
	%start_pPattern rule  6
	%start_pVariation rule  7
	%start_pGroundValue rule  8
	%start_pDuality rule  9
	%start_pLyst    rule  10
	%start_pSymbol  rule  11
	%start_pPrompt  rule  12
	%start_pListExpr1 rule  13
	%start_pListExpr2 rule  14
	%start_pListPattern rule  15
	%start_pListVariation rule  16
	String          rule  17
	Integer         rule  18
	Double          rule  19
	UIdent          rule  20
	LIdent          rule  21
	Wild            rule  22
	Expr            rules 23, 24
	Expr1           rules 25, 26
	Expr2           rules 27, 28
	Expr3           rules 29, 30
	Value           rules 31, 32, 33, 34
	Context         rules 35, 36, 37, 38, 39
	Pattern         rules 40, 41, 42, 43
	Variation       rules 44, 45, 46
	GroundValue     rules 47, 48, 49, 50, 51
	Duality         rules 52, 53
	Lyst            rules 54, 55, 56, 57
	Symbol          rule  58
	Prompt          rule  59
	ListExpr1       rules 60, 61
	ListExpr2       rules 62, 63
	ListPattern     rules 64, 65
	ListVariation   rules 66, 67

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'$'            shift, and enter state 37
	'%'            shift, and enter state 50
	'('            shift, and enter state 51
	'@'            shift, and enter state 52
	'['            shift, and enter state 38
	'\\'           shift, and enter state 53
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'raise'        shift, and enter state 54
	'true'         shift, and enter state 40
	'try'          shift, and enter state 58
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Expr           goto state 72
	Expr1          goto state 73
	Expr2          goto state 56
	Expr3          goto state 45
	Value          goto state 46
	Pattern        goto state 47
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	Prompt         goto state 48

State 1


	'$'            shift, and enter state 37
	'%'            shift, and enter state 50
	'('            shift, and enter state 51
	'@'            shift, and enter state 52
	'['            shift, and enter state 38
	'\\'           shift, and enter state 53
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'raise'        shift, and enter state 54
	'true'         shift, and enter state 40
	'try'          shift, and enter state 58
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Expr1          goto state 71
	Expr2          goto state 56
	Expr3          goto state 45
	Value          goto state 46
	Pattern        goto state 47
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	Prompt         goto state 48

State 2


	'$'            shift, and enter state 37
	'%'            shift, and enter state 50
	'('            shift, and enter state 51
	'@'            shift, and enter state 52
	'['            shift, and enter state 38
	'\\'           shift, and enter state 53
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'raise'        shift, and enter state 54
	'true'         shift, and enter state 40
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Expr2          goto state 70
	Expr3          goto state 45
	Value          goto state 46
	Pattern        goto state 47
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	Prompt         goto state 48

State 3


	'$'            shift, and enter state 37
	'%'            shift, and enter state 50
	'('            shift, and enter state 51
	'@'            shift, and enter state 52
	'['            shift, and enter state 38
	'\\'           shift, and enter state 53
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'true'         shift, and enter state 40
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Expr3          goto state 69
	Value          goto state 46
	Pattern        goto state 47
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	Prompt         goto state 48

State 4


	'$'            shift, and enter state 37
	'%'            shift, and enter state 50
	'@'            shift, and enter state 52
	'['            shift, and enter state 38
	'\\'           shift, and enter state 53
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'true'         shift, and enter state 40
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Value          goto state 68
	Pattern        goto state 47
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	Prompt         goto state 48

State 5


	'{'            shift, and enter state 67

	Context        goto state 66

State 6


	'$'            shift, and enter state 37
	'['            shift, and enter state 38
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'true'         shift, and enter state 40
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Pattern        goto state 65
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35

State 7


	'`'            shift, and enter state 23
	L_UIdent       shift, and enter state 24
	L_Wild         shift, and enter state 25

	UIdent         goto state 19
	Wild           goto state 20
	Variation      goto state 64

State 8


	'$'            shift, and enter state 37
	'false'        shift, and enter state 39
	'true'         shift, and enter state 40
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	GroundValue    goto state 63
	Duality        goto state 33

State 9


	'false'        shift, and enter state 39
	'true'         shift, and enter state 40

	Duality        goto state 62

State 10


	'['            shift, and enter state 38

	Lyst           goto state 61

State 11


	L_LIdent       shift, and enter state 43

	LIdent         goto state 29
	Symbol         goto state 60

State 12


	'%'            shift, and enter state 50

	Prompt         goto state 59

State 13


	'$'            shift, and enter state 37
	'%'            shift, and enter state 50
	'('            shift, and enter state 51
	'@'            shift, and enter state 52
	'['            shift, and enter state 38
	'\\'           shift, and enter state 53
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'raise'        shift, and enter state 54
	'true'         shift, and enter state 40
	'try'          shift, and enter state 58
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Expr1          goto state 55
	Expr2          goto state 56
	Expr3          goto state 45
	Value          goto state 46
	Pattern        goto state 47
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	Prompt         goto state 48
	ListExpr1      goto state 57

State 14


	'$'            shift, and enter state 37
	'%'            shift, and enter state 50
	'('            shift, and enter state 51
	'@'            shift, and enter state 52
	'['            shift, and enter state 38
	'\\'           shift, and enter state 53
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'raise'        shift, and enter state 54
	'true'         shift, and enter state 40
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Expr2          goto state 44
	Expr3          goto state 45
	Value          goto state 46
	Pattern        goto state 47
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	Prompt         goto state 48
	ListExpr2      goto state 49

State 15


	'$'            shift, and enter state 37
	'['            shift, and enter state 38
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'true'         shift, and enter state 40
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Pattern        goto state 30
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	ListPattern    goto state 36

State 16


	'`'            shift, and enter state 23
	L_UIdent       shift, and enter state 24
	L_Wild         shift, and enter state 25

	UIdent         goto state 19
	Wild           goto state 20
	Variation      goto state 21
	ListVariation  goto state 22

State 17


	L_quoted       shift, and enter state 18


State 18

	String -> L_quoted .                                (rule 17)

	'$'            reduce using rule 17
	'%'            reduce using rule 17
	'\''           reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	','            reduce using rule 17
	';'            reduce using rule 17
	'@'            reduce using rule 17
	'['            reduce using rule 17
	'\\'           reduce using rule 17
	']'            reduce using rule 17
	'`'            reduce using rule 17
	'false'        reduce using rule 17
	'raise'        reduce using rule 17
	'true'         reduce using rule 17
	'try'          reduce using rule 17
	'{'            reduce using rule 17
	'|'            reduce using rule 17
	'}'            reduce using rule 17
	L_quoted       reduce using rule 17
	L_integ        reduce using rule 17
	L_doubl        reduce using rule 17
	L_UIdent       reduce using rule 17
	L_LIdent       reduce using rule 17
	L_Wild         reduce using rule 17
	%eof           reduce using rule 17


State 19

	Variation -> UIdent .                               (rule 44)

	'$'            reduce using rule 44
	'%'            reduce using rule 44
	'\''           reduce using rule 44
	'('            reduce using rule 44
	')'            reduce using rule 44
	','            reduce using rule 44
	'->'           reduce using rule 44
	';'            reduce using rule 44
	'@'            reduce using rule 44
	'['            reduce using rule 44
	'\\'           reduce using rule 44
	']'            reduce using rule 44
	'`'            reduce using rule 44
	'false'        reduce using rule 44
	'raise'        reduce using rule 44
	'true'         reduce using rule 44
	'try'          reduce using rule 44
	'{'            reduce using rule 44
	'|'            reduce using rule 44
	'}'            reduce using rule 44
	L_quoted       reduce using rule 44
	L_integ        reduce using rule 44
	L_doubl        reduce using rule 44
	L_UIdent       reduce using rule 44
	L_LIdent       reduce using rule 44
	L_Wild         reduce using rule 44
	%eof           reduce using rule 44


State 20

	Variation -> Wild .                                 (rule 45)

	'$'            reduce using rule 45
	'%'            reduce using rule 45
	'\''           reduce using rule 45
	'('            reduce using rule 45
	')'            reduce using rule 45
	','            reduce using rule 45
	'->'           reduce using rule 45
	';'            reduce using rule 45
	'@'            reduce using rule 45
	'['            reduce using rule 45
	'\\'           reduce using rule 45
	']'            reduce using rule 45
	'`'            reduce using rule 45
	'false'        reduce using rule 45
	'raise'        reduce using rule 45
	'true'         reduce using rule 45
	'try'          reduce using rule 45
	'{'            reduce using rule 45
	'|'            reduce using rule 45
	'}'            reduce using rule 45
	L_quoted       reduce using rule 45
	L_integ        reduce using rule 45
	L_doubl        reduce using rule 45
	L_UIdent       reduce using rule 45
	L_LIdent       reduce using rule 45
	L_Wild         reduce using rule 45
	%eof           reduce using rule 45


State 21

	ListVariation -> Variation .                        (rule 66)
	ListVariation -> Variation . ',' ListVariation      (rule 67)

	','            shift, and enter state 93
	'->'           reduce using rule 66
	%eof           reduce using rule 66


State 22

	%start_pListVariation -> ListVariation .            (rule 16)

	%eof           accept


State 23

	Variation -> '`' . Expr3 '\''                       (rule 46)

	'$'            shift, and enter state 37
	'%'            shift, and enter state 50
	'('            shift, and enter state 51
	'@'            shift, and enter state 52
	'['            shift, and enter state 38
	'\\'           shift, and enter state 53
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'true'         shift, and enter state 40
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Expr3          goto state 92
	Value          goto state 46
	Pattern        goto state 47
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	Prompt         goto state 48

State 24

	UIdent -> L_UIdent .                                (rule 20)

	'$'            reduce using rule 20
	'%'            reduce using rule 20
	'\''           reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	','            reduce using rule 20
	'->'           reduce using rule 20
	';'            reduce using rule 20
	'@'            reduce using rule 20
	'['            reduce using rule 20
	'\\'           reduce using rule 20
	']'            reduce using rule 20
	'`'            reduce using rule 20
	'false'        reduce using rule 20
	'raise'        reduce using rule 20
	'true'         reduce using rule 20
	'try'          reduce using rule 20
	'{'            reduce using rule 20
	'|'            reduce using rule 20
	'}'            reduce using rule 20
	L_quoted       reduce using rule 20
	L_integ        reduce using rule 20
	L_doubl        reduce using rule 20
	L_UIdent       reduce using rule 20
	L_LIdent       reduce using rule 20
	L_Wild         reduce using rule 20
	%eof           reduce using rule 20


State 25

	Wild -> L_Wild .                                    (rule 22)

	'$'            reduce using rule 22
	'%'            reduce using rule 22
	'\''           reduce using rule 22
	'('            reduce using rule 22
	')'            reduce using rule 22
	','            reduce using rule 22
	'->'           reduce using rule 22
	';'            reduce using rule 22
	'@'            reduce using rule 22
	'['            reduce using rule 22
	'\\'           reduce using rule 22
	']'            reduce using rule 22
	'`'            reduce using rule 22
	'false'        reduce using rule 22
	'raise'        reduce using rule 22
	'true'         reduce using rule 22
	'try'          reduce using rule 22
	'{'            reduce using rule 22
	'|'            reduce using rule 22
	'}'            reduce using rule 22
	L_quoted       reduce using rule 22
	L_integ        reduce using rule 22
	L_doubl        reduce using rule 22
	L_UIdent       reduce using rule 22
	L_LIdent       reduce using rule 22
	L_Wild         reduce using rule 22
	%eof           reduce using rule 22


State 26

	GroundValue -> String .                             (rule 48)

	'$'            reduce using rule 48
	'%'            reduce using rule 48
	'\''           reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	','            reduce using rule 48
	';'            reduce using rule 48
	'@'            reduce using rule 48
	'['            reduce using rule 48
	'\\'           reduce using rule 48
	']'            reduce using rule 48
	'`'            reduce using rule 48
	'false'        reduce using rule 48
	'raise'        reduce using rule 48
	'true'         reduce using rule 48
	'try'          reduce using rule 48
	'{'            reduce using rule 48
	'|'            reduce using rule 48
	'}'            reduce using rule 48
	L_quoted       reduce using rule 48
	L_integ        reduce using rule 48
	L_doubl        reduce using rule 48
	L_UIdent       reduce using rule 48
	L_LIdent       reduce using rule 48
	L_Wild         reduce using rule 48
	%eof           reduce using rule 48


State 27

	GroundValue -> Integer .                            (rule 49)

	'$'            reduce using rule 49
	'%'            reduce using rule 49
	'\''           reduce using rule 49
	'('            reduce using rule 49
	')'            reduce using rule 49
	','            reduce using rule 49
	';'            reduce using rule 49
	'@'            reduce using rule 49
	'['            reduce using rule 49
	'\\'           reduce using rule 49
	']'            reduce using rule 49
	'`'            reduce using rule 49
	'false'        reduce using rule 49
	'raise'        reduce using rule 49
	'true'         reduce using rule 49
	'try'          reduce using rule 49
	'{'            reduce using rule 49
	'|'            reduce using rule 49
	'}'            reduce using rule 49
	L_quoted       reduce using rule 49
	L_integ        reduce using rule 49
	L_doubl        reduce using rule 49
	L_UIdent       reduce using rule 49
	L_LIdent       reduce using rule 49
	L_Wild         reduce using rule 49
	%eof           reduce using rule 49


State 28

	GroundValue -> Double .                             (rule 50)

	'$'            reduce using rule 50
	'%'            reduce using rule 50
	'\''           reduce using rule 50
	'('            reduce using rule 50
	')'            reduce using rule 50
	','            reduce using rule 50
	';'            reduce using rule 50
	'@'            reduce using rule 50
	'['            reduce using rule 50
	'\\'           reduce using rule 50
	']'            reduce using rule 50
	'`'            reduce using rule 50
	'false'        reduce using rule 50
	'raise'        reduce using rule 50
	'true'         reduce using rule 50
	'try'          reduce using rule 50
	'{'            reduce using rule 50
	'|'            reduce using rule 50
	'}'            reduce using rule 50
	L_quoted       reduce using rule 50
	L_integ        reduce using rule 50
	L_doubl        reduce using rule 50
	L_UIdent       reduce using rule 50
	L_LIdent       reduce using rule 50
	L_Wild         reduce using rule 50
	%eof           reduce using rule 50


State 29

	Symbol -> LIdent .                                  (rule 58)

	'('            reduce using rule 58
	%eof           reduce using rule 58


State 30

	ListPattern -> Pattern .                            (rule 64)
	ListPattern -> Pattern . ',' ListPattern            (rule 65)

	')'            reduce using rule 64
	','            shift, and enter state 91
	']'            reduce using rule 64
	'|'            reduce using rule 64
	%eof           reduce using rule 64


State 31

	Pattern -> Variation .                              (rule 41)

	'$'            reduce using rule 41
	'%'            reduce using rule 41
	'\''           reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	','            reduce using rule 41
	';'            reduce using rule 41
	'@'            reduce using rule 41
	'['            reduce using rule 41
	'\\'           reduce using rule 41
	']'            reduce using rule 41
	'`'            reduce using rule 41
	'false'        reduce using rule 41
	'raise'        reduce using rule 41
	'true'         reduce using rule 41
	'try'          reduce using rule 41
	'{'            reduce using rule 41
	'|'            reduce using rule 41
	'}'            reduce using rule 41
	L_quoted       reduce using rule 41
	L_integ        reduce using rule 41
	L_doubl        reduce using rule 41
	L_UIdent       reduce using rule 41
	L_LIdent       reduce using rule 41
	L_Wild         reduce using rule 41
	%eof           reduce using rule 41


State 32

	Pattern -> GroundValue .                            (rule 42)

	'$'            reduce using rule 42
	'%'            reduce using rule 42
	'\''           reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	','            reduce using rule 42
	';'            reduce using rule 42
	'@'            reduce using rule 42
	'['            reduce using rule 42
	'\\'           reduce using rule 42
	']'            reduce using rule 42
	'`'            reduce using rule 42
	'false'        reduce using rule 42
	'raise'        reduce using rule 42
	'true'         reduce using rule 42
	'try'          reduce using rule 42
	'{'            reduce using rule 42
	'|'            reduce using rule 42
	'}'            reduce using rule 42
	L_quoted       reduce using rule 42
	L_integ        reduce using rule 42
	L_doubl        reduce using rule 42
	L_UIdent       reduce using rule 42
	L_LIdent       reduce using rule 42
	L_Wild         reduce using rule 42
	%eof           reduce using rule 42


State 33

	GroundValue -> Duality .                            (rule 47)

	'$'            reduce using rule 47
	'%'            reduce using rule 47
	'\''           reduce using rule 47
	'('            reduce using rule 47
	')'            reduce using rule 47
	','            reduce using rule 47
	';'            reduce using rule 47
	'@'            reduce using rule 47
	'['            reduce using rule 47
	'\\'           reduce using rule 47
	']'            reduce using rule 47
	'`'            reduce using rule 47
	'false'        reduce using rule 47
	'raise'        reduce using rule 47
	'true'         reduce using rule 47
	'try'          reduce using rule 47
	'{'            reduce using rule 47
	'|'            reduce using rule 47
	'}'            reduce using rule 47
	L_quoted       reduce using rule 47
	L_integ        reduce using rule 47
	L_doubl        reduce using rule 47
	L_UIdent       reduce using rule 47
	L_LIdent       reduce using rule 47
	L_Wild         reduce using rule 47
	%eof           reduce using rule 47


State 34

	Pattern -> Lyst .                                   (rule 43)

	'$'            reduce using rule 43
	'%'            reduce using rule 43
	'\''           reduce using rule 43
	'('            reduce using rule 43
	')'            reduce using rule 43
	','            reduce using rule 43
	';'            reduce using rule 43
	'@'            reduce using rule 43
	'['            reduce using rule 43
	'\\'           reduce using rule 43
	']'            reduce using rule 43
	'`'            reduce using rule 43
	'false'        reduce using rule 43
	'raise'        reduce using rule 43
	'true'         reduce using rule 43
	'try'          reduce using rule 43
	'{'            reduce using rule 43
	'|'            reduce using rule 43
	'}'            reduce using rule 43
	L_quoted       reduce using rule 43
	L_integ        reduce using rule 43
	L_doubl        reduce using rule 43
	L_UIdent       reduce using rule 43
	L_LIdent       reduce using rule 43
	L_Wild         reduce using rule 43
	%eof           reduce using rule 43


State 35

	Pattern -> Symbol . '(' ListPattern ')'             (rule 40)

	'('            shift, and enter state 90


State 36

	%start_pListPattern -> ListPattern .                (rule 15)

	%eof           accept


State 37

	GroundValue -> '$' . Expr3 '$'                      (rule 51)

	'$'            shift, and enter state 37
	'%'            shift, and enter state 50
	'('            shift, and enter state 51
	'@'            shift, and enter state 52
	'['            shift, and enter state 38
	'\\'           shift, and enter state 53
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'true'         shift, and enter state 40
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Expr3          goto state 89
	Value          goto state 46
	Pattern        goto state 47
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	Prompt         goto state 48

State 38

	Lyst -> '[' . ']'                                   (rule 54)
	Lyst -> '[' . ListPattern ']'                       (rule 55)
	Lyst -> '[' . ListPattern '|' Lyst ']'              (rule 56)
	Lyst -> '[' . ListPattern '|' Variation ']'         (rule 57)

	'$'            shift, and enter state 37
	'['            shift, and enter state 38
	']'            shift, and enter state 88
	'`'            shift, and enter state 23
	'false'        shift, and enter state 39
	'true'         shift, and enter state 40
	L_quoted       shift, and enter state 18
	L_integ        shift, and enter state 41
	L_doubl        shift, and enter state 42
	L_UIdent       shift, and enter state 24
	L_LIdent       shift, and enter state 43
	L_Wild         shift, and enter state 25

	String         goto state 26
	Integer        goto state 27
	Double         goto state 28
	UIdent         goto state 19
	LIdent         goto state 29
	Wild           goto state 20
	Pattern        goto state 30
	Variation      goto state 31
	GroundValue    goto state 32
	Duality        goto state 33
	Lyst           goto state 34
	Symbol         goto state 35
	ListPattern    goto state 87

State 39

	Duality -> 'false' .                                (rule 53)

	'$'            reduce using rule 53
	'%'            reduce using rule 53
	'\''           reduce using rule 53
	'('            reduce using rule 53
	')'            reduce using rule 53
	','            reduce using rule 53
	';'            reduce using rule 53
	'@'            reduce using rule 53
	'['            reduce using rule 53
	'\\'           reduce using rule 53
	']'            reduce using rule 53
	'`'            reduce using rule 53
	'false'        reduce using rule 53
	'raise'        reduce using rule 53
	'true'         reduce using rule 53
	'try'          reduce using rule 53
	'{'            reduce using rule 53
	'|'            reduce using rule 53
	'}'            reduce using rule 53
	L_quoted       reduce using rule 53
	L_integ        reduce using rule 53
	L_doubl        reduce using rule 53
	L_UIdent       reduce using rule 53
	L_LIdent       reduce using rule 53
	L_Wild         reduce using rule 53
	%eof           reduce using rule 53


State 40

	Duality -> 'true' .                                 (rule 52)

	'$'            reduce using rule 52
	'%'            reduce using rule 52
	'\''           reduce using rule 52
	'('            reduce using rule 52
	')'            reduce using rule 52
	','            reduce using rule 52
	';'            reduce using rule 52
	'@'            reduce using rule 52
	'['            reduce using rule 52
	'\\'           reduce using rule 52
	']'            reduce using rule 52
	'`'            reduce using rule 52
	'false'        reduce using rule 52
	'raise'        reduce using rule 52
	'true'         reduce using rule 52
	'try'          reduce using rule 52
	'{'            reduce using rule 52
	'|'            reduce using rule 52
	'}'            reduce using rule 52
	L_quoted       reduce using rule 52
	L_integ        reduce using rule 52
	L_doubl        reduce using rule 52
	L_UIdent       reduce using rule 52
	L_LIdent       reduce using rule 52
	L_Wild         reduce using rule 52
	%eof           reduce using rule 52


State 41

	Integer -> L_integ .                                (rule 18)
